# trello

./: .gitignore  pyproject.toml
trello/: Untitled.ipynb  app.py  trelloapi.py
